--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -22,4 +22,6 @@ $default-size: 1.6rem;
 
 $grid-width: 114rem;
 $grid-gutter-vertical: 8rem;
+$grid-gutter-vertical-small: 4rem;
+
 $grid-gutter-horizontal: 6rem;
