--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,8 +6,33 @@
 
 html {
     font-size: 62.5%;
+
+    @include respond(big-desk) {
+        font-size: 75%;
+    }
+    @include respond(tab-land) {
+        font-size: 55%;
+    }
+    @include respond(tab-port) {
+        font-size: 50%;
+    }
+    @include respond(phone) {
+        font-size: 45%;
+    }
 }
 
 body {
-    padding: 30px;
+    padding: 3rem;
+
+    @include respond(tab-land) {
+        padding: 2rem;
+    }
+    @include respond(tab-port) {
+        padding: 0;
+    }
+}
+
+::selection {
+    background-color: $color-primary;
+    color: white;
 }
