--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -22,6 +22,11 @@ body {
 
         animation-name: moveInLeft;
         animation-duration: 1s;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
 
     &--sub {
@@ -33,6 +38,10 @@ body {
 
         animation-name: moveInRight;
         animation-duration: 1s;
+        @include respond(phone) {
+            letter-spacing: 0.5rem;
+            font-size: 2rem;
+        }
     }
 }
 
@@ -53,6 +62,14 @@ body {
     letter-spacing: 2px;
 
     transition: all 0.2s;
+
+    @include respond(tab-port) {
+        font-size: 2.5rem;
+    }
+    @include respond(phone) {
+        font-size: 2rem;
+        max-width: 80%;
+    }
 
     &:hover {
         transform: skewY(2deg) skewX(15deg) scale(1.1);
