--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -4,20 +4,36 @@
 
 .m-top-10 {
     margin-top: 10rem;
+    @include respond(tab-port) {
+        margin-top: 5rem;
+    }
 }
 
 .m-top-medium {
     margin-top: 4rem !important;
+    @include respond(tab-port) {
+        margin-top: 2.5rem;
+    }
 }
 
 .m-bottom-8 {
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+        margin-bottom: 5rem;
+    }
 }
 
 .m-bottom-small {
     margin-bottom: 1.5rem;
+    @include respond(tab-port) {
+        margin-bottom: 1.25rem;
+    }
 }
 
 .m-bottom-medium {
     margin-bottom: 4rem;
+    @include respond(tab-port) {
+        margin-bottom: 2rem;
+    }
 }
