--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -189,4 +189,60 @@
         font-size: 6rem;
         font-weight: 300;
     }
+
+    @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+        height: auto;
+        background-color: white;
+        border-radius: 3px;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+
+            &--front {
+                background-color: white;
+            }
+
+            &--back {
+                transform: rotateY(0);
+                -webkit-transform: rotateY(0);
+                -moz-transform: rotateY(0);
+                -ms-transform: rotateY(0);
+                -o-transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+                -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+        &__details {
+            padding: 2rem 0;
+        }
+
+        &:hover &__side--front {
+            transform: rotateY(0);
+            -webkit-transform: rotateY(0);
+            -moz-transform: rotateY(0);
+            -ms-transform: rotateY(0);
+            -o-transform: rotateY(0);
+        }
+
+        &__cta {
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+            padding: 4rem;
+        }
+
+        &__pricebox {
+            margin-bottom: 3rem;
+        }
+
+        &__price-value {
+            font-size: 6rem;
+            font-weight: 300;
+        }
+    }
 }
