--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,6 +1,10 @@
 .composition {
     position: relative;
 
+    @include respond(tab-port) {
+        margin-top: 4rem;
+    }
+
     &__photo {
         width: 55%;
         box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
@@ -11,28 +15,60 @@
 
         z-index: 10;
 
+        @include respond(tab-port) {
+            float: left;
+            position: relative;
+            width: 33.3%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
+        }
+
         &--p1 {
             top: -2rem;
             left: 0;
+
+            @include respond(tab-port) {
+                top: 1.3rem;
+                left: 0;
+                transform: scale(1.1);
+            }
         }
         &--p2 {
             top: 3rem;
             right: 0;
+
+            @include respond(tab-port) {
+                top: -1rem;
+                left: 0;
+                transform: scale(1.3);
+                z-index: 20;
+            }
         }
         &--p3 {
             top: 13.5rem;
             left: 20%;
+
+            @include respond(tab-port) {
+                top: 1.3rem;
+                left: 0;
+                transform: scale(1.1);
+            }
         }
 
         &:hover {
             outline: $color-primary 1.5rem solid;
             transform: scale(1.1) translateY(-0.5rem);
             box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
-            z-index: 15;
+            z-index: 25;
+            @include respond(tab-port) {
+                transform: scale(1.6) translateY(-0.5rem);
+            }
         }
     }
 
     &:hover &__photo:not(:hover) {
         transform: scale(0.9);
+        @include respond(tab-port) {
+            transform: scale(1);
+        }
     }
 }
