--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -7,6 +7,10 @@
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
     transition: all 0.2s;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: 0.5rem;
@@ -20,6 +24,10 @@
         -webkit-background-clip: text;
         -moz-background-clip: text;
         color: transparent;
+
+        @include respond(tab-port) {
+            margin-bottom: 0rem;
+        }
     }
 
     &:hover {
