--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
@@ -18,6 +22,11 @@
         display: inline-block;
         border-top: 1px solid $color-grey-dark;
         padding-top: 1rem;
+
+        @include respond(tab-port) {
+            text-align: center;
+            width: 100%;
+        }
     }
 
     &__list {
@@ -52,10 +61,13 @@
     }
 
     &__copy {
-        float: right;
         border-top: 1px solid $color-grey-dark;
         padding-top: 1rem;
         width: 85%;
         text-align: center;
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 }
