--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,17 +1,41 @@
 .row {
     max-width: $grid-width;
+    @include respond(tab-port) {
+        max-width: 50rem;
+        padding: 0 3rem;
+
+        &--big {
+            max-width: 60rem !important;
+        }
+    }
+    @include respond(phone) {
+        max-width: 45rem;
+        padding: 0 1.5rem;
+    }
     margin: 0 auto;
 
     @include clearfix;
 
     &:not(:last-child) {
         margin-bottom: $grid-gutter-vertical;
+        @include respond(tab-port) {
+            margin-bottom: $grid-gutter-vertical-small;
+        }
     }
 
     [class^="col-"] {
         float: left;
         &:not(:last-child) {
             margin-right: $grid-gutter-horizontal;
+
+            @include respond(tab-port) {
+                margin: 0;
+                margin-bottom: $grid-gutter-vertical-small;
+            }
+        }
+
+        @include respond(tab-port) {
+            width: 100% !important;
         }
     }
 
