--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,11 +5,33 @@
             rgba($color-primary-light, 0.8),
             rgba($color-primary-dark, 0.8)
         ),
-        url("../img/hero.jpg");
+        url("../img/hero-small.jpg");
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     position: relative;
+
+    @media only screen and (min-resolution: 192dpi) and (min-width: 900px) {
+        background-image: linear-gradient(
+                to right bottom,
+                rgba($color-primary-light, 0.8),
+                rgba($color-primary-dark, 0.8)
+            ),
+            url("../img/hero.jpg");
+    }
+
+    @media only screen and (min-width: 1800px) {
+        background-image: linear-gradient(
+                to right bottom,
+                rgba($color-primary-light, 0.8),
+                rgba($color-primary-dark, 0.8)
+            ),
+            url("../img/hero.jpg");
+    }
+
+    @include respond(phone) {
+        clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+    }
 
     &__logo-box {
         position: absolute;
